# htmx-boost

./: .age.toml  README.rst  pyproject.toml
.github/workflows/: _doc.yml  release.yml
doc/: conf.py
src/atsphinx/htmx_boost/: __init__.py
tests/: conftest.py  test_it.py
tests/test-root/: index.rst
